--- a/foodiebudgettools/src/components/HomePage_BM/Footer.css
+++ b/foodiebudgettools/src/components/HomePage_BM/Footer.css
@@ -42,7 +42,7 @@
   border: none;
   font-size: 18px;
   margin-bottom: 16px;
-  border: 1px solid #fff;
+  border: 1px solid #242424;
 }
 
 .footer-links {
