fix the react hook not update bug

--- a/foodiebudgettools/src/components/Map_JL/MapCss.css
+++ b/foodiebudgettools/src/components/Map_JL/MapCss.css
@@ -1,5 +1,10 @@
-#map {
-    height: 60%;
-    width: 60%;
-    margin: auto;
-  }
+.map {
+    height: 60vw;
+    width: 60vw;
+    position: relative;
+}
+
+.location-icon{
+    font-size: 2rem;
+    color: red;
+}
