--- a/foodiebudgettools/src/components/Map_JL/MapCss.css
+++ b/foodiebudgettools/src/components/Map_JL/MapCss.css
@@ -1,10 +1,17 @@
 .map {
-    height: 60vw;
-    width: 60vw;
-    position: relative;
+    height: 60%;
+    width: 60%;
+    position: absolute;
+    display: inline;
 }
 
 .location-icon{
     font-size: 2rem;
-    color: red;
+    color: rgb(25, 0, 255);
+}
+.informationArea{
+    margin-right: 5%;
+    width: 25%;
+    height: 25%;
+    display: inline;
 }
