--- a/foodiebudgettools/src/components/Map_JL/MapCss.css
+++ b/foodiebudgettools/src/components/Map_JL/MapCss.css
@@ -1,6 +1,6 @@
 .map {
-    height: 60%;
-    width: 60%;
+    height: 100%;
+    width: 100%;
     position: absolute;
     display: inline;
 }
@@ -15,3 +15,28 @@
     height: 25%;
     display: inline;
 }
+.location-info {
+    position: absolute;
+    top: 300px;
+    right: 80px;
+    width: 400px;
+    min-height: 200px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    font-size: 18px;
+    color: #fff;
+  }
+  
+  .location-info ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .location-info li {
+    padding: 5px 0;
+  }
+  .location-info li a{
+    color: #fff;
+    /* text-decoration: none; */
+  }
