fixed app.css to avoid cascading styles that was impacting budgetinterface.js

--- a/foodiebudgettools/src/components/Chatroom/App.css
+++ b/foodiebudgettools/src/components/Chatroom/App.css
@@ -54,7 +54,7 @@ main::-webkit-scrollbar-thumb {
   background: #6649b8;
 }
 
-form {
+.chatroom form {
   height: 10vh;
   position: fixed;
   bottom: 0;
