--- a/foodiebudgettools/src/components/HomePage_BM/Cards.css
+++ b/foodiebudgettools/src/components/HomePage_BM/Cards.css
@@ -56,7 +56,7 @@ h1 {
   animation-duration: 2s;
 }
 
-.cards__item__pic-wrap::after {
+/* .cards__item__pic-wrap::after {
   content: attr(data-category);
   position: absolute;
   bottom: 0;
@@ -68,7 +68,7 @@ h1 {
   color: #fff;
   background-color: #1f98f4;
   box-sizing: border-box;
-}
+} */
 
 .cards__item__img {
   position: absolute;
@@ -94,7 +94,8 @@ h1 {
 }
 
 .cards__item__text {
-  color: #252e48;
+  /* color: ;#252e48 */
+  color:#fff;
   font-size: 18px;
   line-height: 24px;
 }
