--- a/foodiebudgettools/src/components/Chatroom/App.css
+++ b/foodiebudgettools/src/components/Chatroom/App.css
@@ -149,6 +149,6 @@ p {
 img {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  /* border-radius: 50%; update here*/
   margin: 2px 5px;
 }
