--- a/foodiebudgettools/src/components/SearchModule/style.css
+++ b/foodiebudgettools/src/components/SearchModule/style.css
@@ -6,7 +6,7 @@ body{
 {
     /* height: 100vh; linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),*/
     width: 100%;
-    background-image: url(image.jpg);
+    background-image: url(foodie-sm.jpeg);
     background-repeat: fill;
     background-size:cover;
     display: flex;
