--- a/foodiebudgettools/src/components/Chatroom/App.css
+++ b/foodiebudgettools/src/components/Chatroom/App.css
@@ -66,7 +66,7 @@ main::-webkit-scrollbar-thumb {
 }
 
 form button {
-  width: 20%;
+  /* width: 20%; */
   background-color: rgb(56, 56, 143);
 }
 
