--- a/foodiebudgettools/src/components/UserStory1/budegetInterface.css
+++ b/foodiebudgettools/src/components/UserStory1/budegetInterface.css
@@ -2,4 +2,16 @@
     color: white;
     font-size: 1.5rem;
     text-align: center;
+    border-radius: 10px;
+    border: 3px solid #fff;
+    padding: 50px;
+}
+#eatingOut button {
+    position:center;
+}
+#result{
+    margin: 20px;
+}
+#mainContent{
+    margin: 30px;
 }
